--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description         : >-
                       use tabs over spaces
                       and never broke production.
 baseurl             : "JesseTsang"                      # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
-repository          : github.com/JesseTsang/            # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
+repository          : JesseTsang/JesseTsang.github.io           # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : YoussefRaafatNasry/portfolYOU
 
 
