--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:
 # dribbble          : your_username
   email             : JesseTsang@Outlook.com
 # facebook          : your_username
-  github            : JesseTsang
+  github            : Manekineko-mk1
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
